# marp-temp

./: .gitignore  Dockerfile  docker-compose.yml  example.md  package-lock.json  package.json  pyproject.toml
pptx/: build_pptx.sh  convert.py  convert_v2.py  latex_to_omml.py  make_reference.py  marp2pandoc.py  reference.pptx  render_math.mjs
src/marp_pptx/: __init__.py  __main__.py  builder.py  cli.py  layout.py  parser.py  pptx2md.py  theme.py
src/marp_pptx/data/templates/: 01-title.md  03-cols-2.md  05-sandwich.md  07-equation.md  08-equation-annotated.md  10-figure.md  13-references.md  14-timeline-vertical.md  15-timeline-horizontal.md  17-equations-opt.md  18-zone-flow.md  19-zone-compare.md  22-agenda.md  27-overview.md  28-result.md  29-steps.md  30-quote.md  34-pros-cons.md  38-highlight.md  39-checklist.md  (+5 more)
src/marp_pptx/math/: __init__.py  omml.py  renderer.py
src/marp_pptx/types/: __init__.py
src/marp_pptx/web/: app.py
templates/: 02-divider.md  04-cols-3.md  05-sandwich.md  06-sandwich-3col.md  09-equation-highlight.md  10-figure.md  11-figure-cols.md  12-table.md  14-timeline-vertical.md  15-timeline-horizontal.md  16-end.md  20-zone-matrix.md  21-zone-process.md  23-rq.md  24-result-dual.md  25-summary.md  26-appendix.md  31-history.md  32-panorama.md  33-kpi.md  35-definition.md  36-diagram.md  37-gallery-img.md  43-stack.md  44-card-grid.md  45-split-text.md  46-code.md  49-profile.md
tests/: conftest.py  test_builder.py  test_cli.py  test_math.py  test_parser.py  test_roundtrip.py  test_theme.py  test_types.py
themes/: academic.css
(+22 files in other folders)
